<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:paddingBottom="5dp"
             android:stretchColumns="0,1,2,3"
             tools:context=".MainActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/edtxt_input"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_span="4"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:clickable="false"
            android:gravity="right|center_vertical"
            android:inputType="numberDecimal"
            android:text="0">
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_column="0"
            android:text="@string/sete" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/oito" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/nove" />

        <Button
            android:id="@+id/btn_divisao"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/divisao" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/quatro" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/cinco" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/seis" />

        <Button
            android:id="@+id/btn_multiplicacao"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/multi" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/um" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/dois" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/tres" />

        <Button
            android:id="@+id/btn_subtracao"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/subt" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/bt_ponto"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/ponto" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btn_resultado"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_weight="1"
            android:text="@string/resultado" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_weight="1"
            android:text="@string/soma" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/btn_apagar_caracter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/apagar_caracter" />

        <Button
            android:id="@+id/btn_limpar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/limpar" />
    </TableRow>

</TableLayout>